--- a/app/src/main/res/layout/activity_allbodyparts.xml
+++ b/app/src/main/res/layout/activity_allbodyparts.xml
@@ -6,7 +6,11 @@
     android:layout_height="fill_parent"
     android:background="#F8F1E6"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
