--- a/app/src/main/res/layout/activity_elboweach.xml
+++ b/app/src/main/res/layout/activity_elboweach.xml
@@ -4,7 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".elboweach">
+    tools:context=".elboweach"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <Button
         android:layout_width="wrap_content"
