--- a/app/src/main/res/layout/activity_finger.xml
+++ b/app/src/main/res/layout/activity_finger.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".finger">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="ghdiusg"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
