--- a/app/src/main/res/layout/activity_elbow.xml
+++ b/app/src/main/res/layout/activity_elbow.xml
@@ -23,7 +23,7 @@
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="150dp"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:orientation="vertical">
@@ -32,7 +32,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/ex2"
                         android:layout_margin="10dp"
-                        android:onClick="Imagebuttonclicked"
+
                         android:orientation="horizontal">
                         <LinearLayout
                             android:layout_width="fill_parent"
@@ -62,12 +62,23 @@
                                 android:text="30 sec"
                                 android:textColor="#ffff5722"></TextView>
                         </LinearLayout>
+
                         <LinearLayout
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="2.0">
+                            <ImageView
+                                android:layout_width="fill_parent"
+                                android:layout_height="wrap_content"  />
 
                         </LinearLayout>
+
+                        <Button
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="START"
+                            android:id="@+id/btn1"/>
+
                     </LinearLayout>
                     <TableRow
                         android:layout_width="fill_parent"
@@ -86,7 +97,6 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/ex3"
                         android:layout_margin="10dp"
-                        android:onClick="Imagebuttonclicked"
                         android:orientation="horizontal">
                         <LinearLayout
                             android:layout_width="fill_parent"
@@ -122,6 +132,11 @@
                             android:layout_weight="2.0">
 
                         </LinearLayout>
+                        <Button
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content"
+                            android:text="START"
+                            android:id="@+id/btn2"/>
                     </LinearLayout>
                     <TableRow
                         android:layout_width="fill_parent"
@@ -140,7 +155,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/ex4"
                     android:layout_margin="10dp"
-                    android:onClick="Imagebuttonclicked"
                     android:orientation="horizontal">
                     <LinearLayout
                         android:layout_width="fill_parent"
@@ -176,7 +190,17 @@
                         android:layout_weight="2.0">
 
                     </LinearLayout>
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="START"
+                        android:id="@+id/btn3"/>
                 </LinearLayout>
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="START"
+                        android:id="@+id/btn4"/>
                 <TableRow
                     android:layout_width="fill_parent"
                     android:layout_height="1dp"
@@ -194,7 +218,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/ex5"
                     android:layout_margin="10dp"
-                    android:onClick="Imagebuttonclicked"
                     android:orientation="horizontal">
                     <LinearLayout
                         android:layout_width="fill_parent"
@@ -230,6 +253,11 @@
                         android:layout_weight="2.0">
 
                     </LinearLayout>
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="START"
+                        android:id="@+id/btn1"/>
                 </LinearLayout>
                 <TableRow
                     android:layout_width="fill_parent"
@@ -248,7 +276,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/ex6"
                     android:layout_margin="10dp"
-                    android:onClick="Imagebuttonclicked"
                     android:orientation="horizontal">
                     <LinearLayout
                         android:layout_width="fill_parent"
@@ -284,6 +311,11 @@
                         android:layout_weight="2.0">
 
                     </LinearLayout>
+                    <Button
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:text="START"
+                        android:id="@+id/btn5"/>
                 </LinearLayout>
                 <TableRow
                     android:layout_width="fill_parent"
